--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@ body{
   align-items: center;
   min-height: 100vh;
   text-align: center;
+  background-image: url('https://images.theconversation.com/files/481362/original/file-20220826-10690-nguhqg.jpg?ixlib=rb-1.1.0&rect=0%2C197%2C6000%2C3000&q=45&auto=format&w=668&h=324&fit=crop');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 h1 {
@@ -33,9 +37,11 @@ footer {
   background: #111;
   text-align: center;
   width: 100%;
+  margin-top: 1rem;
   padding: 1rem;
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 2px;
+  border-radius: 15px;
 }
 
 footer a {
