--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,30 @@
 body{
+  background: url(https://images.unsplash.com/photo-1580519542036-c47de6196ba5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80)
+    no-repeat center center fixed;
+  background-repeat: no-repeat;
+
+  background-size: cover;
+  background-position: center center;
   margin: 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   text-align: center;
+  
 }
-
+main{
+  background-color: #489fb5;
+  opacity: 0.8;
+  border: 1px solid #333;
+  border-radius: .5em;
+  padding: .25rem;
+  width: 300px;
+  height: 200px;
+  color: #fff;
+  
+}
 h1 {
   margin: 0;
   margin-bottom: .5rem;
@@ -17,6 +35,7 @@ h1 {
   border-radius: .3em;
   padding: .25rem;
   width: 7em;
+  
 }
 
 select{
@@ -36,6 +55,11 @@ footer {
   padding: 1rem;
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 2px;
+  margin-top: auto;
+  position: fixed;
+   left: 0;
+   bottom: 0;
+  
 }
 
 footer a {
@@ -63,10 +87,10 @@ footer .icon {
   line-height: 1;
 }
 
-#twitter {
+#gitHub {
   color: #00a7e7;
 }
-#instagram {
+#mail {
   color: #ea6960;
 }
 #linkedin {
